--- a/withdraw.html
+++ b/withdraw.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Withdraw</title>
+    <link rel="stylesheet" href="withdraw.css">
     <style>
         /* General Styles */
         * {
@@ -24,23 +25,36 @@
         }
 
         .withdraw-page {
-            width: 90%;
-            max-width: 500px;
-            padding: 20px;
+            width: 95%;
+            max-width: 600px;
+            padding: 30px;
             border: 2px solid rgba(34, 32, 32, 0.442);
             border-radius: 10px;
             background-color: rgba(246, 235, 247, 0.808);
             display: flex;
             flex-direction: column;
             align-items: center;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+            animation: fadeIn 1s ease-in-out;
+        }
+
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+                transform: scale(0.8);
+            }
+
+            to {
+                opacity: 1;
+                transform: scale(1);
+            }
         }
 
         .withdraw-page span {
-            font-size: 28px;
+            font-size: 32px;
             font-weight: 700;
             color: rgb(114, 2, 129);
-            margin-bottom: 20px;
+            margin-bottom: 25px;
             text-align: center;
         }
 
@@ -52,9 +66,9 @@
         }
 
         .child-info {
-            font-size: 16px;
+            font-size: 18px;
             color: rgb(114, 2, 129);
-            margin: 6px 0;
+            margin: 8px 0;
             text-align: center;
             font-weight: 600;
         }
@@ -67,23 +81,23 @@
         }
 
         .withdraw-form label {
-            font-size: 14px;
-            margin-top: 8px;
-            margin-bottom: -3px;
+            font-size: 16px;
+            margin-top: 10px;
             font-weight: 550;
             color: rgba(0, 0, 0, 0.658);
         }
 
         .withdraw-form input {
             width: 100%;
-            height: 40px;
-            margin: 6px 0;
-            padding: 8px;
+            height: 45px;
+            margin: 8px 0;
+            padding: 10px;
             border-radius: 5px;
             border: 1.5px solid rgba(148, 148, 148, 0.904);
-            font-size: 16px;
+            font-size: 17px;
             font-weight: 600;
             outline: none;
+            transition: transform 0.3s, border-color 0.3s;
         }
 
         .withdraw-form input.error {
@@ -92,17 +106,22 @@
             font-weight: bold;
         }
 
+        .withdraw-form input:focus {
+            transform: scale(1.05);
+            border-color: rgb(114, 2, 129);
+        }
+
         .withdraw {
             width: 100%;
-            height: 40px;
-            margin-top: 10px;
+            height: 45px;
+            margin-top: 15px;
             border-radius: 6px;
             background-color: rgb(114, 2, 129);
             color: white;
             cursor: pointer;
             border: none;
             outline: none;
-            font-size: 17px;
+            font-size: 19px;
             transition: background-color 0.3s, transform 0.3s;
         }
 
@@ -208,30 +227,30 @@
             .withdraw-page {
                 width: 100%;
                 height: auto;
-                margin: 0 20px;
+                margin: 20px;
                 padding: 20px;
             }
 
             .withdraw-page span {
-                font-size: 22px;
+                font-size: 26px;
             }
 
             .child-info {
-                font-size: 14px;
+                font-size: 16px;
             }
 
             .withdraw-form label {
-                font-size: 12px;
-            }
-
-            .withdraw-form input {
-                height: 36px;
                 font-size: 14px;
             }
 
+            .withdraw-form input {
+                height: 40px;
+                font-size: 16px;
+            }
+
             .withdraw {
-                height: 36px;
-                font-size: 15px;
+                height: 40px;
+                font-size: 17px;
             }
         }
     </style>
@@ -241,7 +260,7 @@
     <div id="withdrawPage" class="withdraw-page">
         <span>Withdraw Your Coins</span>
         <div class="withdraw-info">
-            <div class="child-info">Min. Withdrawal Amount: 100 Coins</div>
+            <div class="child-info">Min. Withdrawal= <span><img src="coin.png" alt="coin"></span> 500</div>
             <div class="child-info">Conversion Rate: 1 Coin = $0.01</div>
             <form id="withDrawReq" class="withdraw-form">
                 <label for="withdrawn-coin">COIN:</label>
@@ -267,7 +286,6 @@
     <div id="popupMessage"></div>
 
     <script src="Withdraw.js"></script>
-
 </body>
 
 </html>
